@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.3.2 (pending)
 ==========================
 
+- Added conversions between ObjectMap and ObjectKwargs
 - Added CMake ENABLE_* flags for internal dependencies
 
 Release 0.3.1 (2016-01-01)
